Added backed API

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=4004
+PORT=4005
+MONGO_DB_SERV=mongodb+srv://admin:admin@b335-francisco.kfgey6w.mongodb.net/pogi-sige-na-store
 clientID=250104860963-0ks4p413ba7soa3a6lvbebcrun4fdq30.apps.googleusercontent.com
 clientSecret=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
